--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="pl"><head>  <meta charset="utf-8" />  <meta name="viewport" content="width=device-width,initial-scale=1" />  <title>Provercel — Barierowe rozwiązania dla przemysłu</title>  <!-- Model Viewer -->
+<!DOCTYPE html><html lang="pl"><head>  <meta charset="utf-8" />  <meta name="viewport" content="width=device-width,initial-scale=1" />  
+  
 
 <meta name="description" content="Modułowe bariery ochronne dla przemysłu i magazynów. Skonfiguruj zestaw, zobacz podgląd 3D i złóż zapytanie ofertowe." />
 <meta name="keywords" content="bariery ochronne, modułowe bariery, przemysł, magazyny, bezpieczeństwo, Provercel, 3D konfigurator" />
@@ -26,6 +27,10 @@
 <link rel="icon" href="/favicon.ico" type="image/x-icon" />
 <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 
+
+  <title>Provercel — Barierowe rozwiązania dla przemysłu</title>  <!-- Model Viewer -->
+
+-->
 <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>  <style>  :root{ 
 
 
