--- a/index.html
+++ b/index.html
@@ -1,4 +1,24 @@
-<!DOCTYPE html><html lang="pl"><head>  <meta charset="utf-8" />  <meta name="viewport" content="width=device-width,initial-scale=1" />  
+<!DOCTYPE html><html lang="pl"><head>  
+  <meta name="description" content="Provercel oferuje modułowe bariery ochronne do samodzielnego montażu w magazynach i przestrzeniach przemysłowych. Skonfiguruj zestaw i wyślij zapytanie w czasie rzeczywistym z interaktywnym podglądem 3D.">
+  <meta name="keywords" content="bariery ochronne, modułowe bariery, bezpieczeństwo przemysłowe, magazyny, bariery przemysłowe, Provercel, systemy barier, ochrona przemysłowa">
+  <meta name="author" content="Provercel">
+  <meta name="robots" content="index, follow">
+  <meta name="og:title" content="Provercel — Barierowe rozwiązania dla przemysłu">
+  <meta name="og:description" content="Modułowe bariery ochronne dla przemysłu i magazynów. Skonfiguruj zestaw z interaktywnym podglądem 3D i wyślij zapytanie.">
+  <meta name="og:type" content="website">
+  <meta name="og:url" content="https://provercel.vercel.app/">
+  <meta name="og:image" content="https://provercel.vercel.app/logo.png">
+  <meta name="og:locale" content="pl_PL">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Provercel — Barierowe rozwiązania dla przemysłu">
+  <meta name="twitter:description" content="Modułowe bariery ochronne dla przemysłu i magazynów. Skonfiguruj zestaw z interaktywnym podglądem 3D i wyślij zapytanie.">
+  <meta name="twitter:image" content="https://provercel.vercel.app/logo.png">
+  
+  
+  
+  
+  
+  <meta charset="utf-8" />  <meta name="viewport" content="width=device-width,initial-scale=1" />  
   
 
 
