--- a/index.html
+++ b/index.html
@@ -13,7 +13,26 @@
   <meta name="twitter:title" content="Provercel — Barierowe rozwiązania dla przemysłu">
   <meta name="twitter:description" content="Modułowe bariery ochronne dla przemysłu i magazynów. Skonfiguruj zestaw z interaktywnym podglądem 3D i wyślij zapytanie.">
   <meta name="twitter:image" content="https://provercel.vercel.app/logo.png">
+  <!-- Primary Meta Tags -->
+  <title>Provercel — Barierowe rozwiązania dla przemysłu</title>
+  <meta name="title" content="Provercel — Barierowe rozwiązania dla przemysłu" />
+  <meta name="description" content="Provercel oferuje modułowe bariery ochronne do samodzielnego montażu w magazynach i przestrzeniach przemysłowych. Skonfiguruj zestaw i wyślij zapytanie w czasie rzeczywistym z interaktywnym podglądem 3D." />
   
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://provercel.vercel.app/" />
+  <meta property="og:title" content="Provercel — Barierowe rozwiązania dla przemysłu" />
+  <meta property="og:description" content="Provercel oferuje modułowe bariery ochronne do samodzielnego montażu w magazynach i przestrzeniach przemysłowych. Skonfiguruj zestaw i wyślij zapytanie w czasie rzeczywistym z interaktywnym podglądem 3D." />
+  <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+  
+  <!-- X (Twitter) -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://provercel.vercel.app/" />
+  <meta property="twitter:title" content="Provercel — Barierowe rozwiązania dla przemysłu" />
+  <meta property="twitter:description" content="Provercel oferuje modułowe bariery ochronne do samodzielnego montażu w magazynach i przestrzeniach przemysłowych. Skonfiguruj zestaw i wyślij zapytanie w czasie rzeczywistym z interaktywnym podglądem 3D." />
+  <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+  
+  <!-- Meta Tags Generated with https://metatags.io -->-->
   
   
   
