--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <meta property="twitter:description" content="Provercel oferuje modułowe bariery ochronne do samodzielnego montażu w magazynach i przestrzeniach przemysłowych. Skonfiguruj zestaw i wyślij zapytanie w czasie rzeczywistym z interaktywnym podglądem 3D." />
   <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
   
-  <!-- Meta Tags Generated with https://metatags.io -->-->
+  <!-- Meta Tags Generated with https://metatags.io -->
   
   
   
@@ -737,10 +737,13 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
          <span class="qty-unit">szt.</span> 
        </div> 
      </label> 
-     <!-- PRZĘSŁO --> 
+     <!-- słupek --> 
      <label class="option"> 
        <input type="checkbox" class="item-check" data-name="Przęsło proste 2m" data-sku="PRZ-2000"  
-              data-model="https://threejs.org/examples/models/gltf/LeePerrySmith/LeePerrySmith.glb"> 
+                      data-model="https://raw.githubusercontent.com/Provercel/Provercel/main/slupekipt.glb"> 
+
+
+       
        <div style="flex:1; min-width:180px"> 
          <div><strong>Przęsło proste 2m</strong></div> 
          <div class="meta">SKU: PRZ-2000 • siatka 50x50</div> 
