--- a/index.html
+++ b/index.html
@@ -739,14 +739,14 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
      </label> 
      <!-- słupek --> 
      <label class="option"> 
-       <input type="checkbox" class="item-check" data-name="Przęsło proste 2m" data-sku="PRZ-2000"  
+       <input type="checkbox" class="item-check" data-name="Słupek sigma 100 H=700 mm" data-sku="PRZ-2000"  
                       data-model="https://raw.githubusercontent.com/Provercel/Provercel/main/slupekipt.glb"> 
 
 
        
        <div style="flex:1; min-width:180px"> 
-         <div><strong>Przęsło proste 2m</strong></div> 
-         <div class="meta">SKU: PRZ-2000 • siatka 50x50</div> 
+         <div><strong>Słupek sigma 100 • H=700 mm</strong></div> 
+         <div class="meta">SKU: PRZ-700 • Ocynk</div> 
        </div> 
        <div class="qty-wrap"> 
          <span class="qty-label">Ilość:</span> 
