--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
 
        
        <div style="flex:1; min-width:180px"> 
-         <div><strong>Słupek sigma 100 • H=700 mm</strong></div> 
+         <div><strong>Słupek sigma 100 • H=700 mm • Ocynk</strong></div> 
          <div class="meta">SKU: PRZ-700 • Ocynk</div> 
        </div> 
        <div class="qty-wrap"> 
