--- a/index.html
+++ b/index.html
@@ -731,8 +731,8 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
        <input type="checkbox" class="item-check" data-name="Prowadnica L=4300" data-sku="SLP-4300"
               data-model="https://raw.githubusercontent.com/Provercel/Provercel/main/prowadnica.glb"> 
        <div style="flex:1; min-width:180px"> 
-         <div><strong>Prowadnica B L=4300 mm</strong></div> 
-         <div class="meta">SKU: SLP-4300 • 2,5 mm • Ocynk </div> 
+         <div><strong>Prowadnica B L=4300</strong></div> 
+         <div class="meta">SKU: 2,5 mm • Ocynk </div> 
        </div> 
        <div class="qty-wrap"> 
          <span class="qty-label">Ilość:</span> 
@@ -749,7 +749,7 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
        
        <div style="flex:1; min-width:180px"> 
          <div><strong>Słupek sigma 100</strong></div> 
-         <div class="meta">SKU: PRZ-700 • H=700 mm • Ocynk</div> 
+         <div class="meta">SKU: H=700 mm • Ocynk</div> 
        </div> 
        <div class="qty-wrap"> 
          <span class="qty-label">Ilość:</span> 
