--- a/index.html
+++ b/index.html
@@ -760,7 +760,8 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
      <!-- ZŁĄCZE --> 
      <label class="option"> 
        <input type="checkbox" class="item-check" data-name="Złącze kątowe 90°" data-sku="ZLK-090"  
-              data-model="https://cdn.jsdelivr.net/gh/KhronosGroup/glTF-Sample-Models@master/2.0/Duck/glTF-Binary/Duck.glb"> 
+              data-model="https://raw.githubusercontent.com/Provercel/Provercel/main/lacznik90.glb"> 
+       <div style="flex:1; min-width:180px">        <div style="flex:1; min-width:180px">                       data-model="https://raw.githubusercontent.com/Provercel/Provercel/main/slupekipt.glb"> 
        <div style="flex:1; min-width:180px"> 
          <div><strong>Złącze kątowe 90°</strong></div> 
          <div class="meta">SKU: ZLK-090 • śruby M8</div> 
