--- a/index.html
+++ b/index.html
@@ -757,13 +757,13 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
          <span class="qty-unit">szt.</span> 
        </div> 
      </label> 
-     <!-- ZŁĄCZE --> 
+     <!-- Łącznik kątowy 90 --> 
      <label class="option"> 
        <input type="checkbox" class="item-check" data-name="Złącze kątowe 90°" data-sku="ZLK-090"  
               data-model="https://raw.githubusercontent.com/Provercel/Provercel/main/lacznik90.glb"> 
        <div style="flex:1; min-width:180px">                       
-         <div><strong>Złącze kątowe 90°</strong></div> 
-         <div class="meta">SKU: ZLK-090 • śruby M8</div> 
+         <div><strong>Łącznik kątowy 90°</strong></div> 
+         <div class="meta">SKU: ZLK-090 • śruby M16</div> 
        </div> 
        <div class="qty-wrap"> 
          <span class="qty-label">Ilość:</span> 
@@ -771,12 +771,13 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
          <span class="qty-unit">szt.</span> 
        </div> 
      </label> 
-     <!-- STOPKA --> 
+     <!-- Łącznik kątowy 135 --> 
      <label class="option"> 
        <input type="checkbox" class="item-check" data-name="Stopka montażowa 150mm" data-sku="STP-150"  
-              data-model="https://threejs.org/examples/models/gltf/Flamingo.glb"> 
+                       data-model="https://raw.githubusercontent.com/Provercel/Provercel/main/lacznik135zew.glb"> 
+     
        <div style="flex:1; min-width:180px"> 
-         <div><strong>Stopka montażowa 150mm</strong></div> 
+         <div><strong>Łącznik kątowy 135°</strong></div> 
          <div class="meta">SKU: STP-150 • 4 otwory</div> 
        </div> 
        <div class="qty-wrap"> 
