--- a/index.html
+++ b/index.html
@@ -786,11 +786,14 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
          <span class="qty-unit">szt.</span> 
        </div> 
      </label> 
-     <!-- OSŁONA --> 
+     <!-- Łącznik czołowy --> 
      <label class="option"> 
        <input type="checkbox" class="item-check" data-name="Osłona krawędziowa" data-sku="OSL-001"  
-              data-model="https://cdn.jsdelivr.net/gh/mrdoob/three.js@dev/examples/models/gltf/Parrot.glb"> 
-       <div style="flex:1; min-width:180px"> 
+                               data-model="https://raw.githubusercontent.com/Provercel/Provercel/main/lacznikczolowy.glb"> 
+      
+       <div style="flex:1; min-width:180px">        <div style="flex:1; min-width:180px"> 
+     
+    <div style="flex:1; min-width:180px"> 
          <div><strong>Osłona krawędziowa</strong></div> 
          <div class="meta">SKU: OSL-001 • guma + stal</div> 
        </div> 
