--- a/index.html
+++ b/index.html
@@ -772,6 +772,26 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
        </div> 
      </label> 
      
+
+     <!-- łącznik 135 --> 
+     <label class="option"> 
+       <input type="checkbox" class="item-check" data-name="Prowadnica L=4300" data-sku="SLP-4300"
+              data-model="https://raw.githubusercontent.com/Provercel/Provercel/main/lacznik135.glb"> 
+       <div style="flex:1; min-width:180px"> 
+         <div><strong>Łącznik 135° • 2,5 mm • Ocynk</strong></div> 
+         <div class="meta">SKU: SLP-4300 
+    • Ocynk </div> 
+       </div> 
+       <div class="qty-wrap"> 
+         <span class="qty-label">Ilość:</span> 
+         <input type="number" class="qty" min="1" max="999" value="1" inputmode="numeric"> 
+         <span class="qty-unit">szt.</span> 
+       </div> 
+     </label> 
+-->
+
+
+
    </div> 
    <div class="summary" id="summary">Wybrane: brak</div> 
  </div> 
