--- a/index.html
+++ b/index.html
@@ -775,8 +775,8 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
 
      <!-- łącznik 135 --> 
      <label class="option"> 
-       <input type="checkbox" class="item-check" data-name="Prowadnica L=4300" data-sku="SLP-4300"
-              data-model="https://raw.githubusercontent.com/Provercel/Provercel/main/lacznik135.glb"> 
+       <input type="checkbox" class="item-check" data-name="Łącznik L=40" data-sku="Łącznik"
+              data-model="https://raw.githubusercontent.com/Provercel/Provercel/main/lacznik135zew.glb"> 
        <div style="flex:1; min-width:180px"> 
          <div><strong>Łącznik 135° • 2,5 mm • Ocynk</strong></div> 
          <div class="meta">SKU: SLP-4300 
