--- a/index.html
+++ b/index.html
@@ -808,7 +808,23 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
 
 
 
+     <!-- łącznik czołowy z przetloczeniem --> 
+     <label class="option"> 
+       <input type="checkbox" class="item-check" data-name="Łącznik czołowy L=40" data-sku="Łącznik czołowy"
+              data-model="https://raw.githubusercontent.com/Provercel/Provercel/main/lacznikczolowyprze.glb"> 
+       <div style="flex:1; min-width:180px"> 
+         <div><strong>Łącznik czołowy z przetłoczeniem • 2,5 mm • Ocynk</strong></div>
+         <div class="meta">SKU: czo-4300 
+    • Ocynk </div> 
+       </div> 
+       <div class="qty-wrap"> 
+         <span class="qty-label">Ilość:</span> 
+         <input type="number" class="qty" min="1" max="999" value="1" inputmode="numeric"> 
+         <span class="qty-unit">szt.</span> 
+       </div> 
+     </label> 
 
+-->
 
 
 
