--- a/index.html
+++ b/index.html
@@ -778,7 +778,7 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
        <input type="checkbox" class="item-check" data-name="Łącznik L=40" data-sku="Łącznik"
               data-model="https://raw.githubusercontent.com/Provercel/Provercel/main/lacznik135zew.glb"> 
        <div style="flex:1; min-width:180px"> 
-         <div><strong>Łącznik 135° • 2,5 mm • Ocynk</strong></div> 
+         <div><strong>Łącznik 135° • 2,5 mm</strong></div> 
          <div class="meta">SKU: SLP-4300 
     • Ocynk </div> 
        </div> 
@@ -794,7 +794,7 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
        <input type="checkbox" class="item-check" data-name="Łącznik czołowy L=40" data-sku="Łącznik czołowy"
               data-model="https://raw.githubusercontent.com/Provercel/Provercel/main/lacznikczolowy.glb"> 
        <div style="flex:1; min-width:180px"> 
-         <div><strong>Łącznik czołowy • 2,5 mm • Ocynk</strong></div> 
+         <div><strong>Łącznik czołowy • 2,5 mm</strong></div> 
          <div class="meta">SKU: czo-4300 
     • Ocynk </div> 
        </div> 
