--- a/index.html
+++ b/index.html
@@ -794,7 +794,7 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
        <input type="checkbox" class="item-check" data-name="Łącznik czołowy L=40" data-sku="Łącznik czołowy"
               data-model="https://raw.githubusercontent.com/Provercel/Provercel/main/lacznikczolowy.glb"> 
        <div style="flex:1; min-width:180px"> 
-         <div><strong>Łącznik czołowy • 2,5 mm</strong></div> 
+         <div><strong>Łącznik czołowy pocz.</strong></div> 
          <div class="meta">SKU: czo-4300 
     • Ocynk </div> 
        </div> 
@@ -813,7 +813,7 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
        <input type="checkbox" class="item-check" data-name="Łącznik czołowy L=40" data-sku="Łącznik czołowy"
               data-model="https://raw.githubusercontent.com/Provercel/Provercel/main/lacznikczolowyprze.glb"> 
        <div style="flex:1; min-width:180px"> 
-         <div><strong>Łącznik czołowy z przetłoczeniem • 2,5 mm • Ocynk</strong></div>
+         <div><strong>Łącznik czołowy końc.</strong></div>
          <div class="meta">SKU: czo-4300 
     • Ocynk </div> 
        </div> 
