--- a/index.html
+++ b/index.html
@@ -647,6 +647,37 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
 </style></head><body>  <div class="card" role="main"><div>
 
 
+
+
+<script src="https://cdn.jsdelivr.net/npm/@transifex/native@latest/dist/browser.js"></script>
+<script>
+  const tnx = window.transifexNative;
+    tnx.init({
+        token: 'public-token-here', // możesz pominąć przy prostym Google Translate
+          });
+          </script>
+
+          <!-- LUB jeszcze prostsze – wstaw to gdziekolwiek w <head>: -->
+          <script>
+            function googleTranslateElementInit() {
+                new google.translate.TranslateElement({
+                      pageLanguage: 'pl',
+                            includedLanguages: 'en,de,nl,sv,no,da,fr', // dodaj ile chcesz
+                                  layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
+                                        autoDisplay: false
+                                            }, 'google_translate_element');
+                                              }
+                                              </script>
+                                              <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
+                                              <div id="google_translate_element" style="position:fixed; top:10px; right:10px; z-index:9999;"></div>
+
+
+
+
+
+
+
  <header> <h1>
   <img src="logo.png" alt="Logo firmy" width="150">
   
