--- a/index.html
+++ b/index.html
@@ -706,7 +706,7 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
                                                                                                                                   .goog-logo-box, .goog-te-gadget span:not([class]) {
                                                                                                                                       display: none !important;
                                                                                                                                         }
-                                                                                                                                        </style>-->
+                                                                                                                                        </style>
 
 
 
