--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
                                                                                                                   }
                                                                                                                     .goog-te-menu-frame a:hover {
                                                                                                                         background: #333 !important;
-                                                                                                                            color: white !important;
+                                                                                                                            color: #444 !important;
                                                                                                                               }
                                                                                                                               
                                                                                                                                 /* Ukrywa ten głupi link „Powered by Google” (legalne, bo nie uszkadza funkcjonalności) */
