--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
                                                                                                         box-shadow: 0 8px 24px rgba(0,0,0,0.5) !important;
                                                                                                           }
                                                                                                             .goog-te-menu-frame a {
-                                                                                                                color: #ccc !important;
+                                                                                                                color: #444 !important;
                                                                                                                   }
                                                                                                                     .goog-te-menu-frame a:hover {
                                                                                                                         background: #333 !important;
