--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
                                                                   
                                                                     /* Strzałka i tekst w środku */
                                                                       .goog-te-gadget-simple a {
-                                                                          color: #ffffff !important;
+                                                                          color: #444 !important;
                                                                             }
                                                                             
                                                                               /* Kolor po najechaniu */
