--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@ footer{ margin-top:12px; font-size:12px; color:var(--muted); }
                                                                                       }
                                                                                       
                                                                                         /* Cały rozwijany menu też ciemne (najważniejsze!) */
-                                                                                          .goog-te-menu-value span:first-child { color: white !important; }
+                                                                                          .goog-te-menu-value span:first-child { color: #444 !important; }
                                                                                             .goog-te-menu-frame {
                                                                                                 background: #1f1f1f !important;
                                                                                                     border: 1px solid #444 !important;
