--- a/index.html
+++ b/index.html
@@ -647,6 +647,37 @@
                                                                                                                                                                                                                                            </style></head><body>  <div class="card" role="main"><div>
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- CIEMNY, ELEGANCKI PASEK GOOGLE TRANSLATE -->
+<div id="google_translate_element"></div>
+
+<script type="text/javascript">
+  function googleTranslateElementInit() {
+      new google.translate.TranslateElement({
+            pageLanguage: 'pl',
+                  includedLanguages: 'en,de,nl,fr,es,it,sv,da,no',
+                        layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
+                              autoDisplay: false
+                                  }, 'google_translate_element');
+                                    }
+                                    </script>
+                                    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+                                    
+                                    <style>
+                                      /* Pozycja –-->
+
                                                                                                                                                                                                                                             <header> <h1>
                                                                                                                                                                                                                                               <img src="logo.png" alt="Logo firmy" width="150">
                                                                                                                                                                                                                                                 
