--- a/index.html
+++ b/index.html
@@ -711,7 +711,7 @@
                                                                                                                                                       
                                                                                                                                                         /* chowamy śmieci Google */
                                                                                                                                                           .goog-logo-box, .goog-te-gadget span:not([class]), .goog-te-gadget-icon { display:none !important; }
-                                                                                                                                                          </style>-->
+                                                                                                                                                          </style>
 
 
 
