--- a/index.html
+++ b/index.html
@@ -684,6 +684,7 @@
                                                                             .goog-te-gadget-simple span:first-child a {
                                                                                 display: inline-block !important;
                                                                                   }
+                                                                                 <strong> Language </strong>
                                                                                     .goog-te-gadget-simple > span > a:first-child {
                                                                                         visibility: hidden !important;
                                                                                             position: relative !important;
