--- a/index.html
+++ b/index.html
@@ -693,7 +693,8 @@
                                                                         
                                                                           /* ZMIENIAMY TEKST NA "Language" */
                                                                             .goog-te-gadget-simple span:first-child a {
-                                                                                display: inline-block !important;
+                                                                               content: "PL"
+                                                                              display: inline-block !important;
                                                                                   }
                                                                                  
                                                                                     .goog-te-gadget-simple > span > a:first-child {
