--- a/index.html
+++ b/index.html
@@ -671,7 +671,8 @@
             pageLanguage: 'pl',
                   includedLanguages: 'en,de,nl,fr,es,it,sv,da,no',
                         layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
-                              autoDisplay: false
+                          content: "x"
+                        autoDisplay: false
                                   }, 'google_translate_element');
                                     }
                                     </script>
