--- a/index.html
+++ b/index.html
@@ -675,6 +675,8 @@
                         autoDisplay: false
                                   }, 'google_translate_element');
                                     }
+
+                                    <booton type="normal"> x
                                     </script>
                                     <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
                                     
