--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
                                   }, 'google_translate_element');
                                     }
 
-                                    <booton type="normal"> x
+                                    <button type="normal"> x
                                     </script>
                                     <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
                                     
