--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
                                                                                                                                                       .goog-te-menu-frame a:hover { background:#333 !important; color:white !important; }
                                                                                                                                                       
                                                                                                                                                         /* chowamy śmieci Google */
-                                                                                                                                                          .goog-logo-box, .goog-te-gadget span:not([class])
+                                                                                                                                                          .goog-logo-box, .goog-te-gadget span:not([class]), .goog-te-gadget-icon { display:none }
                                                                                                                                                           </style>
 
                                                                                                                                                                                                                                              <body>  <div class="card" role="main"><div>
