--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@
                                                                                                                                                                                                           display: none !important;
                                                                                                                                                                                                             }
                                                                                                                                                                                                             </style>
-                                                                                                                                                                                                            <!-- KONIEC GOOGLE TRANSLATE -->-->
+                                                                                                                                                                                                            <!-- KONIEC GOOGLE TRANSLATE -->
 
 
 
