--- a/realizacje.html
+++ b/realizacje.html
@@ -21,8 +21,8 @@
      <h2>Nasze realizacje</h2>
   <div class="galeria">
     <div class="projekt">
-      <img src="https://provercel.vercel.app/projekt1.jpg" alt="Projekt 1">
-       <img src="https://provercel.vercel.app/projekt2.jpg" alt="Projekt 2">
+      <img src="https://provercel.vercel.app/1.jpg" alt="Projekt 1">
+       <img src="https://provercel.vercel.app/2.jpg" alt="Projekt 2">
     
   </div>
       <footer>
